k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reposentinel
  labels:
    name: reposentinel
